# cupang-updater2

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  cliff.toml  index.html  mkdocs.yml  objects.inv  pyproject.toml  ruff.toml
CHANGELOG/: index.html
docs/scripts/: gen_pages.py
reference/SUMMARY/: index.html
reference/cupang_updater/cmd_opts/: index.html
reference/cupang_updater/config/config/: index.html
reference/cupang_updater/config/default/: index.html
reference/cupang_updater/config/schema/: index.html
reference/cupang_updater/downloader/downloader/: index.html
reference/cupang_updater/downloader/progress/: index.html
reference/cupang_updater/logger/logger/: index.html
reference/cupang_updater/main/: index.html
reference/cupang_updater/manager/plugin/: index.html
reference/cupang_updater/manager/server/: index.html
reference/cupang_updater/meta/: index.html
reference/cupang_updater/rich/: index.html
scripts/: gen_ref_pages.py
search/: search_index.json
src/cupang_updater/: __init__.py  cmd_opts.py  main.py  meta.py  rich.py
src/cupang_updater/config/: config.py  default.py  schema.py
src/cupang_updater/downloader/: downloader.py  progress.py
src/cupang_updater/logger/: logger.py
src/cupang_updater/manager/: external.py  plugin.py  server.py
src/cupang_updater/remote_storage/: base.py  ftp.py  remote.py  sftp.py  smb.py  webdav.py
src/cupang_updater/task/: scan.py  update.py
src/cupang_updater/updater/: base.py
src/cupang_updater/utils/: common.py  config.py  date.py  hash.py  jar.py  rich.py  url.py
(+41 files in other folders)
